--- a/style.css
+++ b/style.css
@@ -87,7 +87,7 @@ nav a:hover {
 
 footer {
 	text-align: center;
-	background: url("bg.jpg");
+	background: url("https://cdn.glitch.global/581743d6-43c6-417e-9d7b-0e3c7ce32041/bg.jpg?v=1662836403736");
 	padding: 40px 0;
 }
 
@@ -98,7 +98,7 @@ footer {
 }
 
 form {
-	margin: 40px 0;
+	margin: 40px auto;
 }
 
 form label, form legend {
@@ -111,7 +111,7 @@ form label, form legend {
 	display: block;
 	margin: 0 0 20px;
 	padding: 10px 25px;
-	width: 50%;
+	width: 100%;
 }
 
 .checkbox {
@@ -244,8 +244,13 @@ td, th {
 }
 
 .video {
-	width: 100%;
+	max-width: 940px;
 	margin: 2em auto;
+}
+
+.form_container {
+	margin: 0 auto;
+	max-width: 550px;
 }
 
 @media screen and (max-width: 768px) {
